--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.3.2'
     id 'io.spring.dependency-management' version '1.1.6'
+    id 'org.flywaydb.flyway' version '7.11.2'
 }
 
 group = 'org.mohammed'
@@ -46,6 +47,14 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+}
+
+flyway {
+    url = 'jdbc:postgresql://localhost:5432/auth_server'
+    user = 'admin'
+    password = 'secret'
+    schemas = ['auth_server']
+    baselineOnMigrate = true
 }
 
 tasks.named('test') {
